--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "rcon": "^1.0.3"
   }
 }
