--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,9 @@ NODE_PORT=3000
 NODE_HTTPS=false
 
 DB_HOST=localhost
-DB_USERNAME=user
-DB_PASSWORD=user
+DB_DATABASE=mordhau
+DB_USERNAME=root
+DB_PASSWORD=
 
 RCON_HOST=
 RCON_PORT=
