modulating codebase / setup config

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Alex Morris",
+  "author": "Alex Morris (plzHelpM3)",
   "license": "MIT",
   "dependencies": {
     "date-and-time": "^1.0.0",
