--- a/config.json
+++ b/config.json
@@ -11,9 +11,32 @@
         "179261015924539392"
     ],
 
-    "bootstrap":[
-        {"rcon": true},
-        {"discord": true},
-        {"command_line": true}
+    "bootstrap":{
+        "discord": true,
+        "command_line": true
+    },
+
+    "discord":{
+        "link": "https://discord.gg/GBZJmrR",   
+        "chat_channel_id": "839952559749201920",
+        "punishment_channel_id": "842075143136084008",
+        "admin_role_id": "770321070959493170"
+    },
+
+    "leaderboard":{
+        "url": "https://cronchduels.com/server-one/leaderboard"
+    },
+
+    "blacklisted_words":[
+        "nigger",
+        "Nigger",
+        "niggers",
+        "Niggers",
+        "nigers",
+        "Nigers",
+        "N!gger",
+        "Nigger3r",
+        "nigga",
+        "Nigga"
     ]
 }
