remove 2 blacklisted words

--- a/config.json
+++ b/config.json
@@ -29,8 +29,6 @@
         "N!gger",
         "Nigger3r",
         "nigga",
-        "Nigga",
-        "nig",
-        "Nig"
+        "Nigga"
     ]
 }
